{
    "name": "MyInputAction",
    "maps": [
        {
            "name": "DefaultMap",
            "id": "e6f6641e-3153-46bc-8da1-27b2df43fb6b",
            "actions": [
                {
                    "name": "PlayerMove",
                    "type": "Value",
                    "id": "dccb9717-2d91-4814-ac8b-5dbef7d44c22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerSprint",
                    "type": "Button",
                    "id": "ef849940-4089-48da-a703-cb4c1b235ae8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerShoot",
                    "type": "Button",
                    "id": "a269c6e2-ded3-4cba-b6a3-d3d221b3f19d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerLook",
                    "type": "Value",
                    "id": "6efa40a4-dd1e-4e01-a62a-77e7189cec7d",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.05,y=0.05)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c663f862-8cb1-4e70-a90b-6af48176c938",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f96d7cc0-a7b3-4ba1-abd3-82835368120d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee1363cd-5e3a-4e34-a09a-ba655b92029c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5d204c86-507e-46c0-bba4-785749765b5a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b6e5691-14db-4c78-acd0-26de3005f036",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f7ffb66c-ffb0-4fbd-b6a4-54f443ffe82b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerSprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d60ddd7d-a5a6-485d-a54a-40dd02c54cfa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c45b9124-1507-4b4e-9f67-bdc6fd9a92cb",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}